Fixes 'too much space' problem

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -128,7 +128,7 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48em) {
   .content {
-    max-width: 38rem;
+    max-width: 100%;
     margin-left: 20rem;
     margin-right: 2rem;
   }
@@ -161,7 +161,7 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 64em) {
   .layout-reverse .content {
-    margin-left: 4rem;
+    margin-left: 5%;
     margin-right: 22rem;
   }
 }
